# qa-agent

./: .docker  .dockerignore  .env  .env.example  .gitignore  .pre-commit-config.yaml  AI_QA_Platform_Test_Suite.xlsx  AI_QA_Platform_Test_Suite_EXECUTED.xlsx  CICD_GUIDE.md  Dockerfile  INSTALL.md  README.md  admin_users_api.py  agent_runner.py  api.py  app.py  asgi.py  conftest.py  deploy.sh  folder_tree.txt  main.py  main_api.py  pyproject.toml  pytest.ini  readme.md  requirements-dev.txt  requirements-phase2.txt  requirements.txt  ruff.toml  slack_trigger.py  test.yml  ui_patch_llm_hide.js
.claude/: settings.local.json
agent/: agent_runner.py  api_server.py  chat_orchestrator.py  classify.py  conftest.py  github_fetcher.py  jira_connector.py  orchestrator.py  planner.py  regression.py  ticket_provider.py  ticket_router.py  understanding_layer.py  verifier.py
auth/: db.py  models.py  routes.py  sso_routes.py
config/: discovery.yaml  environments.yaml  integrations.json  llm.yaml  llm.yaml.bak  rbac.json  secret_key  tools.yaml
creds_patch/: patch_for_thread_safe_creds.py  run_context.py
data/: app.db  jiomart_auth_state.json  llm_settings.json  runs.json
deploy/: Dockerfile  aws_launch.sh  docker-compose.yml  ec2_setup.sh  ecs-task-def.json  ecs_cdk_stack.py  init-db.sql  lambda-sam-template.yaml  nginx.conf
docs/: AUTONOMOUS_AGENT_DESIGN.md
evaluation/: golden_dataset.json
integrations/: azure_devops.py  bug_tracker_interface.py  file_connector.py  jira_adapter.py
logs/: openai_calls.jsonl
monitoring/: __init__.py  cloudwatch_dashboard.json  (+5 more)
(+549 files in other folders)
